# weedremeed-scripts

./: .gitignore  README.md  WR_lib_uploader.py  customCalls.py  download_collection.py  download_org.py  download_project.py  duplicateProjectGroups.py  pyproject.toml  readme.md  requirements.txt  uploadSingleFile.py  upload_directory.py
