[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "weedremeed-client",
]

[tool.uv.sources]
weedremeed-client = { git = "ssh://git@gitlab.internal.2pisoftware.com/customers/CISS/weedremeed/weedremeed-python" }
